fixed squished header buttons on mobile

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -165,12 +165,10 @@
   font-family: "Fira Code", monospace !important;
 }
 
-
-
 @media (max-width: 600px) {
   .header h2 {
     white-space: nowrap;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     margin-bottom: 4px;
   }
 }
